tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_disallows_underscore_on_right_hand_side/execute__tests__stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
error: in expressions, `_` can only be used on the left-hand side of an assignment
  ┌─ src/main.nr:4:22
  │
4 │             let _x = _;
  │                      - `_` not allowed here
  │

Aborting due to 1 previous error
